# data_flow_library

./: .clang_format  .clang_tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  dconfig  dfl.hpp  generate_documentation.sh  implementedPipelines.md  main.cpp
.github/workflows/: doxygen-push.yml
benchmark/: benchmark.cpp  benchmark_every_other_DNO.cpp  benchmark_every_other_O.cpp  benchmark_file_read.cpp  benchmark_fscan.cpp  benchmark_many_ops.cpp  benchmark_skip2.cpp  benchmark_skip_half.cpp  benchmark_sum.cpp  benchmark_sumv2.cpp  custom_pipes.hpp  inp_gen.py  main.cpp  main_mem_measure.cpp  moving_average_detection_loop.cpp  moving_average_detection_pipe.cpp  moving_average_detection_pipe_with_partition.cpp  moving_average_simplified.cpp
data/: generate_documentation.sh  headerFile
docs/: _i_o_8hpp.html  _i_o_8hpp.js  _i_o_8hpp_source.html  adjacent_8hpp.html  adjacent_8hpp.js  adjacent_8hpp_source.html  annotated.html  annotated_dup.js  base__generator_8hpp.html  base__generator_8hpp.js  base__generator_8hpp_source.html  chunks_8hpp.html  chunks_8hpp_source.html  class_i_o-members.html  class_i_o.html  class_i_o.js  class_reader-members.html  class_reader.html  class_writer-members.html  class_writer.html  classdfl_1_1gen_1_1_gen_iterator-members.html  classdfl_1_1gen_1_1_gen_iterator.html  classdfl_1_1gen_1_1base__generator-members.html  classdfl_1_1gen_1_1base__generator.html  classdfl_1_1gen_1_1counter-members.html  classdfl_1_1gen_1_1counter.html  classdfl_1_1gen_1_1counter.js  classdfl_1_1gen_1_1file-members.html  classdfl_1_1gen_1_1file.html  classdfl_1_1gen_1_1file.js  classdfl_1_1gen_1_1noise-members.html  classdfl_1_1gen_1_1noise.html  classdfl_1_1gen_1_1noise.js  classdfl_1_1gen_1_1random__err-members.html  classdfl_1_1gen_1_1random__err.html  classdfl_1_1gen_1_1random__err.js  classdfl_1_1gen_1_1range-members.html  classdfl_1_1gen_1_1range.html  classdfl_1_1gen_1_1range.js  classdfl_1_1gen_1_1repeat-members.html  (+410 more)
docs-resources/: headerFile
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  (+20 more)
examples/: for_each.cpp
examples/mod/: flag.cpp  noise.cpp  random_err.cpp  repeat.cpp  take.cpp
examples/modifier/: noise.cpp  random_err.cpp  take.cpp
examples/pipe/: chunks.cpp  drop.cpp  drop_while.cpp  filter.cpp  fork.cpp  get_var.cpp  intersperse.cpp  moving_avg.cpp  partition.cpp  scanl.cpp  set_state.cpp  side_effect.cpp  stride.cpp  take.cpp  tap.cpp  tee.cpp  transform.cpp  transform_s.cpp
examples/red/: fork.cpp  partition.cpp
examples/sink/: for_each.cpp  histogram.cpp  hole.cpp  max.cpp  min.cpp  print.cpp  printf.cpp  push_back.cpp  set_var.cpp  sum.cpp  to_out_stream.cpp
include/dfl/: dfl.hpp  main_page.md
include/dvfw/: adjacent.hpp  base.hpp  chunks.hpp  drop.hpp  drop_while.hpp  dvfw.hpp  filter.hpp  for_each.hpp  fork.hpp  generator.hpp  hole.hpp  operator.hpp  printf.hpp  push_back.hpp  scanl.hpp  send.hpp  (+6 more)
src/: benchmark_basic_range.txt  benchmark_compiled_range.txt  benchmark_skip_range.txt  benchmark_sum.csv  main.cpp  plot.py
tests/: CMakeLists.txt  chunks.cpp  drop.cpp  drop_while.cpp  filter.cpp  fork.cpp  hole.cpp  scanl.cpp  set_state.cpp  take.cpp  tee.cpp  test.cpp  test_example.cpp  transform.cpp
tests/generators/: file.cpp  impl_generator.cpp  inp.txt
tests/mod/: noise.cpp  repeat.cpp  take.cpp
tests/modifyer/: noise.cpp
tests/pipe/: chunks.cpp  drop.cpp  drop_while.cpp  filter.cpp  fork.cpp  intersperse.cpp  moving_avg.cpp  partition.cpp  scanl.cpp  set_state.cpp  side_effect.cpp  stride.cpp  take.cpp  tap.cpp  tee.cpp  transform.cpp  transform_s.cpp
tests/rdir/: fork.cpp  partition.cpp
tests/red/: fork.cpp  partition.cpp
tests/sink/: for_each.cpp  histogram.cpp  hole.cpp  max.cpp  min.cpp  print.cpp  printf.cpp  push_back.cpp  sum.cpp  to_out_stream.cpp
(+98 files in other folders)
